update html doc

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   </head>
   <body>
     <ul>
-      <li class="f"><a href="#">facebook</a></li>
-      <li class="t"><a href="#">twitter</a></li>
-      <li class="i"><a href="#">instagram</a></li>
-      <li class="w"><a href="#">whatsapp</a></li>
+      <li class="f"><a href="#">Facebook</a></li>
+      <li class="t"><a href="#">Telegram</a></li>
+      <li class="i"><a href="#">Instagram</a></li>
+      <li class="w"><a href="#">Whatsapp</a></li>
     </ul>
   </body>
 </html>
